fix Web3Connect z-index

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -20,3 +20,10 @@
   display: table;
   clear: both;
 }
+
+/**
+ * the Web3Connect popup
+ */
+:global div#WEB3_CONNECT_MODAL_ID > div {
+  z-index: 100000;
+}
